# NPG-Lite-Flasher

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: layout.tsx  page.tsx
