[package]
name = "NPG-Lite-Flasher"
version = "0.1.0"
description = "Rust based flashing program for NPG Lite"
authors = ["Aman Maheshwari", "Deepak Khatri"]
license = "GPL-3.0"
repository = "https://github.com/upsidedownlabs/NPG-Lite-Flasher"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
espflash = "2.0.0"
serialport = "4.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

